--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
         <meta charset=utf-8/>
-        <title>Nicole website</title>
+        <title>Landing page</title>
     </head>
     <body>
         <div id=app></div>
